[package]
name = "photo-organizer-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for Google Photos & Drive organization -- 6 tools wrapping Python scripts for analyze, organize, archive, deduplicate"
license = "MIT"
authors = ["Purple Squirrel Media LLC"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
